--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-BOT_TOKEN=7034821402:AAHKpdXLt0e5y7ocGdsyOSOKQ5KsbSpDluo
-SUPERADMIN_IDS=6678521239          
+BOT_TOKEN=
+SUPERADMIN_IDS=6594279455          
 ADMIN_IDS=
