--- a/.env
+++ b/.env
@@ -1,3 +1,9 @@
-BOT_TOKEN=
-SUPERADMIN_IDS=6594279455          
+# Telegram
+BOT_TOKEN=6888623440:AAHizIkrvMd0FDH6VA5iOAqBFRmM8m9xH9g
+
+# Admin seeding (faqat bir marta seed bo‘ladi; keyin DB orqali yashaydi)
+SUPERADMIN_IDS=6678521239  #Push qilishda Super admin uchun o'zingini idngizni shu yera qoying!
 ADMIN_IDS=
+
+# Postgres (lokal default). Agar boshqa user/host bo‘lsa, moslab o‘zgartirasan.
+DATABASE_URL=postgresql://postgres:tarixAppDB123@localhost:5432/chat_tarix
